# CSC8507_8508

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
Assets/Meshes/Adelie_Tomorin/: Adelie_Tomori.fbx  Adelie_Tomori.pmx  penguin_walking.vmd  read me.txt
Assets/Shaders/: BindingSlots.glsl  Debug.frag  Debug.vert  ObjectData.glsl  PassData.glsl  scene.frag  scene.vert  shadow.frag  shadow.vert  skybox.frag  skybox.vert
CSC8503/: BindingSlots.h  CMakeLists.txt  GameTechRenderer.cpp  GameTechRenderer.h  GameTechRendererInterface.h  Level.cpp  Level.h  LevelRegistry.cpp  LevelRegistry.h  Level_00.cpp  MetalObject.cpp  MetalObject.h  MyGame.cpp  MyGame.h  Player.cpp  Player.h
CSC8503/Assimp/: ModelLoader.h  NCLAssimpMesh.cpp  NCLAssimpMesh.h
CSC8503/Dialogue/: DialogueDB.h  DialogueNPC.h  DialogueRunner.h  DialogueSystem.cpp  DialogueSystem.h  DialogueTypes.h  Tutorial_Level.json
CSC8503CoreClasses/: CollisionDetection.cpp  CollisionDetection.h  GameClient.cpp  GameObject.cpp  GameServer.cpp  NavigationGrid.cpp  NetworkBase.cpp  NetworkObject.h  PhysicsObject.cpp  PhysicsObject.h  PhysicsSystem.cpp  PhysicsSystem.h  QuadTree.h
CSC8507_8508/: GameCharacter.h  Main.cpp  MyGame.cpp  MyGame.h  Player.cpp  Player.h
CSC8507_8508CoreClasses/: BehaviourAction.h  BehaviourNode.h  BehaviourSelector.h  BehaviourSequence.h  GameClient.h  GameObject.h  NavigationGrid.h  NetworkBase.h  NetworkObject.cpp  PhysicsSystem.cpp  PositionConstraint.cpp
MiddleWares/: CMakeLists.txt
NCLCoreClasses/: Camera.h
